# argocd-exporter

./: .gitignore  Dockerfile  README.md  exporter.py  pyproject.toml  requirements.txt  test_exporter.py
.github/workflows/: ci-cd.yaml
